final final code revision. changed font sizes to avoid colons being cut off at the cusp of break widths. set max widths for header and win/loss messages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ changed the width of collection box to create 3 rows of four elements*/
 
     .collectionHolder{
         width:70%;
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .collectionBox{
